Add support for query configuration
As of v2.1.0-beta.23 webpack requires loader configuration to be passed in as a query.

By merging the default config instead of using || the loader always considers the defaultConfig when it gets partially set. Due to this change in behavior bumping the major version up.

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "main": "index.js",
   "files": [ "index.js" ],
   "dependencies": {
-    "isparta": "4.x.x"
+    "isparta": "4.x.x",
+    "loader-utils": "^0.2.16"
   },
   "engines": {
     "node": ">=0.10.0"
