--- a/package.json
+++ b/package.json
@@ -1,13 +1,21 @@
 {
   "name": "isparta-loader",
-  "version": "2.0.0",
+  "version": "3.0.0",
   "description": "isparta instrumenter loader for webpack",
-  "keywords": [ "webpack", "loader", "isparta", "istanbul", "coverage" ],
+  "keywords": [
+    "webpack",
+    "loader",
+    "isparta",
+    "istanbul",
+    "coverage"
+  ],
   "homepage": "https://github.com/deepsweet/isparta-loader",
   "repository": "deepsweet/isparta-loader",
   "author": "Kir Belevich <kir@soulshine.in> (https://github.com/deepsweet)",
   "main": "index.js",
-  "files": [ "index.js" ],
+  "files": [
+    "index.js"
+  ],
   "dependencies": {
     "isparta": "4.x.x",
     "loader-utils": "^0.2.16"
